@@ -1,4 +1,11 @@
-$Id: ChangeLog 3772 2013-02-13 20:35:53Z chrfranke $
+$Id: ChangeLog 3774 2013-02-14 20:58:31Z chrfranke $
+
+2013-02-14  Christian Franke  <franke@computer.org>
+
+	drivedb.h:
+	- SandForce Driven SSDs: Kingston V+ 200, Mushkin Chronos deluxe,
+	  OCZ Talos 2
+	- Plextor M3 (Pro) Series SSDs
 
 2013-02-13  Christian Franke  <franke@computer.org>
 
